--- a/index.html
+++ b/index.html
@@ -1,22 +1,43 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=e:\Downloads\phone.png, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Phone</title>
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="./css/main.css" />
+    <link rel="stylesheet" href="./css/style.css" />
     <script src="./js/script.js" defer></script>
-</head>
-<body>
-    <div class="container">
+  </head>
+  <body>
+    <nav class="nav">
+      <ul>
+        <li><a href="#">Home</a></li>
+        <li><a href="#">Services</a></li>
+        <li><a href="#">Shopping</a></li>
+        <li><a href="#">About Us</a></li>
+      </ul>
+    </nav>
+    <main class="main-content">
+      <div class="container">
         <div class="content">
           <h1>New <span>Collection</span></h1>
-          <p>Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore eum vel neque numquam inventore quod pariatur veniam quidem?</p>
+          <p>
+            Lorem ipsum, dolor sit amet consectetur adipisicing elit. Tempore
+            eum vel neque numquam inventore quod pariatur veniam quidem?
+          </p>
           <div class="btn-container">
-            <button class="btn" aria-label="Botão de registro"><a href="#">Join Now</a></button>
-            <button class="btn2" aria-label="Botão de login"><a href="#">Log In</a></button>
+            <button class="btn" aria-label="Botão de registro">
+              <a href="#">Join Now</a>
+            </button>
+            <button class="btn2" aria-label="Botão de login">
+              <a href="#">Log In</a>
+            </button>
           </div>
-          <div class="dot-buttons" role="group" aria-label="Navegação dos slides">
+          <div
+            class="dot-buttons"
+            role="group"
+            aria-label="Navegação dos slides"
+          >
             <button class="dot active" aria-label="Slide 1"></button>
             <button class="dot" aria-label="Slide 2"></button>
             <button class="dot" aria-label="Slide 3"></button>
@@ -24,8 +45,9 @@
           </div>
         </div>
         <div class="phoneimg">
-            <img src="./images/phone.png" alt="Imagem do celular">
+          <img src="./images/phone.png" alt="Imagem do celular" />
         </div>
       </div>
-</body>
+    </main>
+  </body>
 </html>
