javascript para alterar os telefones quando clicar em outro botão

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
           </div>
         </div>
         <div class="phoneimg">
-          <img src="./images/phone.png" alt="Imagem do celular" />
+          <img src="./images/phone1.webp" alt="Imagem do celular" />
         </div>
       </div>
     </main>
